force-app/main/default/objects/Season__c/Season__c.object-meta.xml
<CustomObject>
    <description
  >Time-bound competition period for a league (e.g., 2024-2025 Season)</description>
    <label>Season</label>
    <nameField>
        <label>Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>