force-app/main/default/objects/Season__c/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <description>Master-Detail relationship to the parent League</description>
    <label>League</label>
    <referenceTo>League__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>