force-app/main/default/objects/Season__c/fields/Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Registration_Deadline__c</fullName>
    <description>Deadline for player registration for this season</description>
    <label>Registration Deadline</label>
    <type>Date</type>
</CustomField>