force-app/main/default/objects/Season__c/validationRules/Valid_Season_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Season_Dates</fullName>
    <active>true</active>
    <description>Ensures start date is before end date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    Start_Date__c &gt;= End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date must be before end date.</errorMessage>
</ValidationRule>